compiler/tests/compile-error/vector-assoc-out-of-bounds.arret
(import [stdlib base])

(def _ (vector-assoc [1 2 3] 3 0))
      ;^^^^^^^^^^^^^^^^^^^^^^^^^^ ERROR index 3 out of bounds for vector of length 3

(defn main! () ->! ())